--- a/index.html
+++ b/index.html
@@ -94,17 +94,21 @@
               <a class="nav-link" href="#">Jobs</a>
             </li>
           </ul> 
+
+          <ul class="navbar-nav ms-auto mb-lg-0">
+            <li class="nav-but">
+              <a class="btn btn-outline-light" href="#">Login</a>&nbsp;
+            </li>
+            <li class="nav-but">
+              <a class="btn btn-outline-light" href="#">SignUp</a>
+            </li>
+          </ul>
+        
       </div>
-       </div>
-       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#"><span class="glyphicon glyphicon-user"></span>SignUp</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Login</a>
-        </li>
-       </ul>
-  </nav>
+    </div>
+    </nav>
+
+  
   <div class="container-fluid mt-3">
     <div class="row" style="background-color: rgb(245, 231, 227)">
       <div class="col-lg-6">
