--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
   <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
   <title>Coding App</title>
-  <link rel="stylesheet" href="/Home/CSS/Home.css">
+  <link rel="stylesheet" href="/CSS/Home.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="Home/images/icons8-quiz.gif" alt="Avatar Logo" style="width:40px;" class="rounded-pill"/> 
+        <img src="../images/icons8-quiz.gif" alt="Logo" class="img-responsive" style="width:40px;" class="rounded-pill"/> 
         <span>Coding Quiz</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
