--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="../images/icons8-quiz.gif" alt="Logo" class="img-responsive" style="width:40px;" class="rounded-pill"/> 
+        <img src="../images/icons8-quiz.gif" alt="Logo" class="img-responsive" style="width:40px;"> 
         <span>Coding Quiz</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
