--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="../images/icons8-quiz.gif" alt="Logo" class="img-responsive" style="width:40px;"> 
+        <img src="/images/logo.gif" alt="Logo" class="img-responsive" style="width:40px;"> 
         <span>Coding Quiz</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -135,11 +135,11 @@
       <div class="col-md-3">
   
   <div class="card" style="width: 18rem">
-    <img class="card-img-top" src="../Home/images/complete-java-backend-development-program-thumbnail.png" alt="Card image" style="width:100%"/>
+    <img class="card-img-top" src="../images/img2.png" alt="Card image" style="width:100%"/>
     <div class="card-body">
-      <img src="../Home/images/Group7622-1669294650.svg" alt=""/><span style="font-size: 10px; color: grey;">30k+ interested</span>
+      <img src="../images/Group.svg" alt=""/><span style="font-size: 10px; color: grey;">30k+ interested</span>
       <p class="card-text">Complete Backend Development Program</p>
-      <img src="../Home/images/StarRating-1669270221.svg" alt=""/><span style="font-size: 10px;color:orange;">6 seats left</span><br>
+      <img src="/images/users.svg" alt=""/><span style="font-size: 10px;color:orange;">6 seats left</span><br>
     </div>
      <div class="card-footer" style="justify-content:space-between;display: flex; padding: 20px;background-color: rgb(208, 248, 235);">
         <p>₹ 21999</p>
@@ -150,11 +150,11 @@
       <div class="col-md-3">
   
         <div class="card" style="width: 18rem">
-          <img class="card-img-top" src="../Home/images/c-Programming-basic-to-advanced-thumbnail.png" alt="Card image" style="width:100%"/>
+          <img class="card-img-top" src="../images/img3.png" alt="Card image" style="width:100%"/>
           <div class="card-body">
-            <img src="../Home/images/Group7622-1669294650.svg" alt=""><span style="font-size: 10px; color: grey;">30k+ interested</span>
+            <img src="../images/Group.svg" alt=""><span style="font-size: 10px; color: grey;">30k+ interested</span>
             <p class="card-text">Master C Programming with Data Structures</p>
-            <img src="../Home/images/Levels-1669283463.svg" alt=""><span style="font-size: 10px;color:grey">Intermediate and Advance</span><br>
+            <img src="../images/Levels.svg" alt=""><span style="font-size: 10px;color:grey">Intermediate and Advance</span><br>
           </div>
            <div class="card-footer" style="justify-content:space-between;display: flex; padding: 20px;background-color: rgb(208, 248, 235);">
               <p>₹ 20999</p>
@@ -165,11 +165,11 @@
             <div class="col-md-3">
   
               <div class="card" style="width: 18rem">
-                <img class="card-img-top" src="../Home/images/complete-interview-preparation-thumbnail.png" alt="Card image" style="width:100%"/>
+                <img class="card-img-top" src="../images/img1.png" alt="Card image" style="width:100%"/>
                 <div class="card-body">
-                  <img src="../Home/images/Group7622-1669294650.svg" alt=""/><span style="font-size: 10px; color: grey;">50k+ interested</span>
+                  <img src="../images/Group.svg" alt=""/><span style="font-size: 10px; color: grey;">50k+ interested</span>
                   <p class="card-text">Complete Interview Preparation & Complete Guide</p>
-                  <img src="../Home/images/StarRating-1669270221.svg" alt=""><span style="font-size: 10px;color:orange">4 seats left</span><br>
+                  <img src="../images/users.svg" alt=""><span style="font-size: 10px;color:orange">4 seats left</span><br>
                 </div>
                  <div class="card-footer" style="justify-content:space-between;display: flex; padding: 20px;background-color: rgb(208, 248, 235);">
                     <p>₹ 21999</p>
@@ -180,11 +180,11 @@
                   <div class="col-md-3">
   
                     <div class="card" style="width: 18rem">
-                      <img class="card-img-top" src="../Home/images/Data-Structures-With-Python-thumbnail.png" alt="Card image" style="width:100%"/>
+                      <img class="card-img-top" src="../images/img4.png" alt="Card image" style="width:100%"/>
                       <div class="card-body">
-                        <img src="../Home/images/Group7622-1669294650.svg" alt=""/><span style="font-size: 10px; color: grey;">30k+ interested</span>
+                        <img src="../images/Group.svg" alt=""/><span style="font-size: 10px; color: grey;">30k+ interested</span>
                         <p class="card-text">Data Structures & Algorithms in Python - Self Paced</p>
-                        <img src="../Home/images/Levels-1669283463.svg" alt=""/><span style="font-size: 10px;color:grey">Intermediate and Advance</span><br>
+                        <img src="../images/Levels.svg" alt=""/><span style="font-size: 10px;color:grey">Intermediate and Advance</span><br>
                       </div>
                        <div class="card-footer" style="justify-content:space-between;display: flex; padding: 20px;background-color: rgb(208, 248, 235);">
                           <p>₹ 21999</p>
@@ -195,11 +195,11 @@
                         <div class="col-md-3">
   
                           <div class="card" style="width: 18rem">
-                            <img class="card-img-top" src="../Home/images/devops-live-thumbnail.png" alt="Card image" style="width:100%"/>
+                            <img class="card-img-top" src="../images/img5.png" alt="Card image" style="width:100%"/>
                             <div class="card-body">
-                              <img src="../Home/images/Group7622-1669294650.svg" alt=""/><span style="font-size: 10px; color: grey;">30k+ interested</span>
+                              <img src="../images/Group.svg" alt=""/><span style="font-size: 10px; color: grey;">30k+ interested</span>
                               <p class="card-text">DevOps Engineering - Planning to Production</p>
-                              <img src="../Home/images/StarRating-1669270221.svg" alt=""/><span style="font-size: 10px;color:orange">2 seats left</span><br>
+                              <img src="../images/users.svg" alt=""/><span style="font-size: 10px;color:orange">2 seats left</span><br>
                             </div>
                              <div class="card-footer" style="justify-content:space-between;display: flex; padding: 20px;background-color: rgb(208, 248, 235);">
                                 <p>₹ 21999</p>
@@ -211,11 +211,11 @@
                               <div class="col-md-3">
   
                                 <div class="card" style="width: 18rem">
-                                  <img class="card-img-top" src="../Home/images/data-structures-and-algorithms-in-javascript-thumbnail.png" alt="Card image" style="width:100%"/>
+                                  <img class="card-img-top" src="../images/img6.png" alt="Card image" style="width:100%"/>
                                   <div class="card-body">
-                                    <img src="../Home/images/Group7622-1669294650.svg" alt=""/><span style="font-size: 10px; color: grey;">30k+ interested</span>
+                                    <img src="../images/Group.svg" alt=""/><span style="font-size: 10px; color: grey;">30k+ interested</span>
                                     <p class="card-text">Data Structures & Algorithms in JavaScript - Self Paced</p>
-                                    <img src="../Home/images/Levels-1669283463.svg" alt=""/><span style="font-size: 10px;color:grey">Intermediate and Advance</span><br>
+                                    <img src="../images/Levels.svg" alt=""/><span style="font-size: 10px;color:grey">Intermediate and Advance</span><br>
                                   </div>
                                    <div class="card-footer" style="justify-content:space-between;display: flex; padding: 20px;background-color: rgb(208, 248, 235);">
                                       <p>₹ 21999</p>
@@ -227,11 +227,11 @@
                                     <div class="col-md-3">
   
                                       <div class="card" style="width: 18rem">
-                                        <img class="card-img-top" src="../Home/images/complete-test-series-product-companies-thumbnail (1).png" alt="Card image" style="width:100%"/>
+                                        <img class="card-img-top" src="../images/img7.png" alt="Card image" style="width:100%"/>
                                         <div class="card-body">
-                                          <img src="../Home/images/Group7622-1669294650.svg" alt=""/><span style="font-size: 10px; color: grey;">30k+ interested</span>
+                                          <img src="../images/Group.svg" alt=""/><span style="font-size: 10px; color: grey;">30k+ interested</span>
                                           <p class="card-text">Complete Test Series for Product-Based Companies</p>
-                                          <img src="../Home/images/Levels-1669283463.svg" alt=""/><span style="font-size: 10px;color:grey">Intermediate and Advance</span><br>
+                                          <img src="../images/Levels.svg" alt=""/><span style="font-size: 10px;color:grey">Intermediate and Advance</span><br>
                                         </div>
                                          <div class="card-footer" style="justify-content:space-between;display: flex; padding: 20px;background-color: rgb(208, 248, 235);">
                                             <p>₹ 21999</p>
@@ -243,11 +243,11 @@
                                           <div class="col-md-3">
   
                                             <div class="card" style="width: 18rem">
-                                              <img class="card-img-top" src="../Home/images/data-science-live-thumbnail.png" alt="Card image" style="width:100%"/>
+                                              <img class="card-img-top" src="../images/img8.png" alt="Card image" style="width:100%"/>
                                               <div class="card-body">
-                                                <img src="../Home/images/Group7622-1669294650.svg" alt=""/><span style="font-size: 10px; color: grey;">30k+ interested</span>
+                                                <img src="../images/Group7622-1669294650.svg" alt=""/><span style="font-size: 10px; color: grey;">30k+ interested</span>
                                                 <p class="card-text">Complete Machine Learning & Data Science Program</p>
-                                                <img src="../Home/images/Levels-1669283463.svg" alt=""/><span style="font-size: 10px;color:grey">Intermediate and Advance</span><br>
+                                                <img src="/images/Levels.svg" alt=""/><span style="font-size: 10px;color:grey">Intermediate and Advance</span><br>
                                               </div>
                                                <div class="card-footer" style="justify-content:space-between;display: flex; padding: 20px; background-color: rgb(208, 248, 235);">
                                                   <p>₹ 21999</p>
@@ -259,11 +259,11 @@
                                                 <div class="col-md-3">
   
                                                   <div class="card" style="width: 18rem">
-                                                    <img class="card-img-top" src="../Home/images/cpp-programming-basic-to-advanced-thumbnail.png" alt="Card image" style="width:100%"/>
+                                                    <img class="card-img-top" src="../images/img9.png" alt="Card image" style="width:100%"/>
                                                     <div class="card-body">
-                                                      <img src="../Home/images/Group7622-1669294650.svg" alt=""/><span style="font-size: 10px; color: grey;">30k+ interested</span>
+                                                      <img src="../images/Group7622-1669294650.svg" alt=""/><span style="font-size: 10px; color: grey;">30k+ interested</span>
                                                       <p class="card-text">Master C++ Programming - Complete Beginner to Advanced</p>
-                                                      <img src="../Home/images/StarRating-1669270221.svg"alt=""/><span style="font-size: 10px;color:grey">2 seats left</span><br>
+                                                      <img src="../images/users.svg"alt=""/><span style="font-size: 10px;color:grey">2 seats left</span><br>
                                                     </div>
                                                      <div class="card-footer" style="justify-content:space-between;display: flex; padding: 20px; background-color: rgb(208, 248, 235);">
                                                         <p>₹ 21000</p>
