--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
   <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
   <title>Coding App</title>
-  <link rel="stylesheet" href="/CSS/Home.css">
+<link rel="stylesheet" href="/CSS/index.css">
+<link rel="stylesheet" href="index1.html">
+<link rel="stylesheet" href="index2.html">
 </head>
 <body>
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -97,10 +99,10 @@
 
           <ul class="navbar-nav ms-auto mb-lg-0">
             <li class="nav-but">
-              <a class="btn btn-outline-light" href="#">Login</a>&nbsp;
+              <a class="btn btn-outline-light" href="index1.html">Login</a>&nbsp;
             </li>
             <li class="nav-but">
-              <a class="btn btn-outline-light" href="#">SignUp</a>
+              <a class="btn btn-outline-light" href="index2.html">SignUp</a>
             </li>
           </ul>
         
