--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
   <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js'></script>
   <title>Coding App</title>
-<link rel="stylesheet" href="/CSS/index.css">
+<link rel="stylesheet" href="/CSS/Home.css">
 <link rel="stylesheet" href="index1.html">
 <link rel="stylesheet" href="index2.html">
 </head>
@@ -128,6 +129,7 @@
     </div>
   </div>
   <div class="grid-container-fluid" style="background-color: white;">
+    <div class="d-flex flex-row align-items-center"></div>
     <div class="row">
       <div class="col-md-12">
       <h2>Offline Courses</h2>
